--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@
 --trusted-host files.pythonhosted.org
 asyncio
 aiohttp==3.6.2
-botbuilder-core
-botbuilder-integration-aiohttp==4.11.0
 botbuilder-ai==4.11.0
+botframework-connector==4.11.0
+botbuilder-core==4.11.0
+botbuilder-integration-aiohttp==4.11.0
+botbuilder-schema==4.11.0
 cookiecutter==1.7.0
 idna==2.9
 requests==2.23.0
